# rust-kql

./: Cargo.toml  README.md
arrow-kq-ext/: Cargo.toml
arrow-kq-ext/src/: regex.rs
datafusion-kql/: Cargo.toml
datafusion-kql/src/: lib.rs  macros.rs  operators.rs  planner.rs  session.rs
datafusion-kql/src/function/: mod.rs
datafusion-kql/src/function/math/: mod.rs
datafusion-kql/src/function/string/: mod.rs
kq/: Cargo.toml
kq/src/: kql.rs  main.rs
kqlparser/: Cargo.toml
kqlparser/src/: ast.rs  datetime.rs  lib.rs  parser.rs  utils.rs
src/: ast.rs  parser.rs
