[package]
name = "datafusion-kql"
description = "DataFusion KQL Query Planner"
keywords = ["datafusion", "kql", "parser", "planner"]
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
kqlparser = { workspace = true }
arrow-schema = { workspace = true }
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-functions-aggregate = { workspace = true }
itertools = "0.12"
wildmatch = "2.4"
