[package]
name = "kq"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
datafusion-kql = { path = "../datafusion-kql" }
datafusion = { workspace = true }
kqlparser = { path = "../kqlparser" }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
