[package]
name = "kq"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
datafusion-kql = { workspace = true }
datafusion = { workspace = true }
kqlparser = { workspace = true }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
