[package]
name = "kqlparser"
description = "Simple Kusto Query Language (KQL) Parser"
keywords = ["kql", "parser"]
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
nom = "7"
